4: add all tables, data

--- a/bsa15-lec6-orm/bsa15-lec6-orm.csproj
+++ b/bsa15-lec6-orm/bsa15-lec6-orm.csproj
@@ -48,20 +48,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bsa.cs" />
+    <Compile Include="Bsa-2015\Bsa.cs" />
     <Compile Include="Entities\CourseContext.cs" />
     <Compile Include="Entities\CourseContextInitializer.cs" />
-    <Compile Include="Migrations\201507122030162_CreateTables.cs" />
-    <Compile Include="Migrations\201507122030162_CreateTables.Designer.cs">
-      <DependentUpon>201507122030162_CreateTables.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201507122050593_1.cs" />
-    <Compile Include="Migrations\201507122050593_1.Designer.cs">
-      <DependentUpon>201507122050593_1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201507122056056_2.cs" />
-    <Compile Include="Migrations\201507122056056_2.Designer.cs">
-      <DependentUpon>201507122056056_2.cs</DependentUpon>
+    <Compile Include="Migrations\201507130959353_CreateTables.cs" />
+    <Compile Include="Migrations\201507130959353_CreateTables.Designer.cs">
+      <DependentUpon>201507130959353_CreateTables.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Category.cs" />
@@ -79,14 +71,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201507122030162_CreateTables.resx">
-      <DependentUpon>201507122030162_CreateTables.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201507122050593_1.resx">
-      <DependentUpon>201507122050593_1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201507122056056_2.resx">
-      <DependentUpon>201507122056056_2.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201507130959353_CreateTables.resx">
+      <DependentUpon>201507130959353_CreateTables.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
